--- a/css/pagestyle.css
+++ b/css/pagestyle.css
@@ -13,7 +13,7 @@ body{
     position: relative;
 }
 
-.bg1{
+.effect-bg1{
     position: absolute;
     width: 50%;
     z-index: -1;
@@ -22,7 +22,7 @@ body{
     transform: rotate(-95deg);
 }
 
-.bg2{
+.effect-bg2{
     position: absolute;
     width: 42%;
     z-index: -1;
@@ -30,7 +30,7 @@ body{
     right: -130px;
 }
 
-.bg3{
+.effect-bg3{
     position: absolute;
     width: 30%;
     z-index: -1;
@@ -38,7 +38,7 @@ body{
     right: -40px;
 }
 
-.bg4{
+.effect-bg4{
     position: absolute;
     width: 40%;
     z-index: -1;
@@ -46,7 +46,7 @@ body{
     left: -200px;
 }
 
-.bg5{
+.effect-bg5{
     position: absolute;
     width: 45%;
     z-index: -1;
@@ -55,7 +55,7 @@ body{
     transform: rotate(90deg);
 }
 
-.bg6{
+.effect-bg6{
     position: absolute;
     width: 40%;
     z-index: -1;
@@ -63,7 +63,7 @@ body{
     left: -200px;
 }
 
-.bg7{
+.effect-bg7{
     position: absolute;
     width: 40%;
     z-index: -1;
@@ -71,7 +71,7 @@ body{
     right: -80px;
 }
 
-.bg8{
+.effect-bg8{
     position: absolute;
     width: 40%;
     z-index: -1;
@@ -87,6 +87,72 @@ section{
     position: relative;
 }
 
+.scrolldown2{
+	position:absolute;
+	bottom:10px;
+	right:10%;
+}
+
+/*Scrollテキストの描写*/
+.scrolldown2 span{
+    /*描画位置*/
+	position: absolute;
+	left:10px;
+	bottom:10px;
+    /*テキストの形状*/
+	color: #eee;
+	font-size: 1.3rem;
+    font-family: 'Noto Sans', sans-serif;
+	letter-spacing: 0.2em;
+	/*縦書き設定*/
+	-ms-writing-mode: tb-rl;
+    -webkit-writing-mode: vertical-rl;
+    writing-mode: vertical-rl;
+}
+
+/* 丸の描写 */
+.scrolldown2:before {
+    content: "";
+    /*描画位置*/
+    position: absolute;
+    bottom:0;
+    left:-4px;
+    /*丸の形状*/
+	width:10px;
+	height:10px;
+	border-radius: 50%;
+	background:#f1f1f1;
+	animation:
+		circlemove 2.0s ease-in-out infinite,
+		cirlemovehide 2.0s ease-out infinite;
+}
+
+/*下からの距離が変化して丸の全体が上から下に動く*/
+@keyframes circlemove{
+      0%{bottom:300px;}
+     100%{bottom:-5px;}
+ }
+
+/*上から下にかけて丸が透過→不透明→透過する*/
+@keyframes cirlemovehide{
+      0%{opacity:0}
+     50%{opacity:1;}
+    80%{opacity:0.9;}
+	100%{opacity:0;}
+ }
+
+/* 線の描写 */
+.scrolldown2:after{
+	content:"";
+    /*描画位置*/
+	position: absolute;
+	bottom:0;
+	left:0;
+    /*線の形状*/
+	width:2px;
+	height: 300px;
+	background:#f1f1f1;
+}
 
 .video-box {
     position: relative;
@@ -115,33 +181,58 @@ h1{
     font-family: 'Noto Sans', sans-serif;
     font-weight: 800;
     width: 750px;
-    margin: 250px auto;
     padding: 30px 0;
     color: #31294c;
-
-    position: relative;
-    border-top: solid 4px #5756BB;
-    border-bottom: solid 4px #5756BB;
 }
 
-h1:before, h1:after {
+.LR{
+    position: relative;
+    width: 750px;
+    margin: 250px auto;
+}
+
+.LR:before, .LR:after {
     content: '';
     position: absolute;
-    width: 4px;/*左右の線の幅*/
-    height: 100px;
-    background-color: #5756BB;/*左右の線の色*/
+    width: 180px;
+    height: 70px;
   }
 
-  h1:before {/*左の線について*/
-    top: -30px;
-    left: 10px;
-  }
+  .LR::before {
+    border-left: solid 4px #5756BB;
+    top: -20px;
+    left: 0;
+}
 
-  h1:after {/*右の線について*/
-    top: 30px;
-    right: 10px;
-  }
-  
+.LR::after {
+    border-right: solid 4px #5756BB;
+    bottom: -20px;
+    right: 0;
+}
+
+.TB{
+   position: relative;
+   width: 750px;
+}
+
+.TB:before, .TB:after {
+    content: '';
+    position: absolute;
+    width: 180px;
+    height: 70px;
+}
+
+.TB::before{
+    border-top: solid 4px #5756BB;
+    top: 0;
+    left: -20px;
+}
+
+.TB::after{
+    border-bottom: solid 4px #5756BB;
+    bottom: 0;
+    right: -20px;
+}
 
 .step-box{
     margin-bottom: 50px;
@@ -179,15 +270,26 @@ li{
     margin:0 auto;
 }
 
-.choice-btn li{
-    position: relative;
-}
-
-
 .choice-btn img{
     width: 75%;
     height: auto;
     margin:0 auto 50px;
+}
+
+.choice-btn li{
+    position: relative;
+}
+
+.choice-btn p{
+    position: absolute;
+    top: 5%;
+    left: 12.5%;
+    font-size: 20px;
+    font-weight: 700;
+    background: #f1f1f1;
+    color: #31294c;
+    width: 20%;
+    text-align: center;
 }
 
 .choice-btn li img{
@@ -219,6 +321,36 @@ li{
     padding: 0 3% 0 6%;
 }
 
+.arrow{
+	position: relative;
+	display: inline-block;
+	padding: 0 0 0 16px;
+	color: #000;
+	vertical-align: middle;
+	text-decoration: none;
+	font-size: 15px;
+}
+.arrow::before,
+.arrow::after{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	margin: auto;
+	content: "";
+	vertical-align: middle;
+}
+
+.arrow-shape::before{
+	left: 50%;
+	width: 15px;
+	height: 15px;
+	border-top: 4px solid #31294c;
+	border-right: 4px solid #31294c;
+	/* -webkit-transform: rotate(0deg); */
+	transform: rotate(135deg);
+}
+
 h3{
     font-size: 40px;
     color: #f1f1f1;
@@ -233,7 +365,7 @@ h3{
     position: absolute;
     top: 50%;
     left: 0;
-    transform: translateY(-50%) translateX(-50%)
+    transform: translateY(-50%) translateX(-50%);
 }
 
 .step-text p{
