--- a/css/topstyle.css
+++ b/css/topstyle.css
@@ -255,6 +255,7 @@ span{
 }
 
 footer{
+    font-family: 'Noto Sans', sans-serif;
     text-align: center;
     font-size: 14px;
     padding-bottom: 20px;
