--- a/css/topstyle.css
+++ b/css/topstyle.css
@@ -17,8 +17,8 @@ body{
     position: absolute;
     width: 55%;
     z-index: -1;
-    top: 60%;
-    left: -250px;
+    top: 50%;
+    left: -20%;
     transform: rotate(-95deg);
 }
 
@@ -27,8 +27,18 @@ body{
     width: 50%;
     z-index: -1;
     top: 25%;
-    right: -150px;
+    right: -20%;
     transform: rotate(-95deg);
+}
+
+.bg3{
+    position: absolute;
+    opacity: 0;
+}
+
+.bg4{
+    position: absolute;
+    opacity: 0;
 }
 
 section{
@@ -48,6 +58,7 @@ section{
 	position:absolute;
 	bottom:10px;
 	right:10%;
+    height: 100%;
 }
 
 /*Scrollテキストの描写*/
@@ -86,7 +97,7 @@ section{
 
 /*下からの距離が変化して丸の全体が上から下に動く*/
 @keyframes circlemove{
-      0%{bottom:300px;}
+      0%{bottom:30%;}
      100%{bottom:-5px;}
  }
 
@@ -107,7 +118,7 @@ section{
 	left:0;
     /*線の形状*/
 	width:2px;
-    height: 300px;
+    height: 30%;
 	background:#f1f1f1;
 }
 
@@ -115,22 +126,26 @@ section{
     position: relative;
     overflow: hidden;
     width: 100%;
-    /* height: 100vh; */
     background: rgba(0, 0, 0, 0.3);
-    padding-top: 56.25%;
-    /* background-size: cover; */
 }
 
 .video {
-    position: absolute;
+    position: relative;
     top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    width: 100vw;
     z-index: -1;
+    vertical-align: bottom;
+}
+
+.video::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 h2{
@@ -272,6 +287,10 @@ footer{
         gap: 60px;
     }
 
+    .creator-text p{
+        text-align: center;
+    }
+
 
 
     .creator-box img{
@@ -283,6 +302,37 @@ footer{
 
 
 @media all and (max-width:480px) {
+    .bg1{
+        top: 35%;
+        left: -30%;
+        width: 80%;
+    }
+    
+    .bg2{
+        width: 80%;
+        top: 3%;
+        right: -20%;
+    }
+
+    .bg3{
+        opacity: 1;
+        width: 100%;
+        top: 65%;
+        left: -40%;
+        transform: rotate(-95deg);
+        z-index: -1;
+    }
+    
+    .bg4{
+        opacity: 1;
+        width: 80%;
+        top: 50%;
+        right: -40%;
+        transform: rotate(-95deg);
+        z-index: -1;
+    }
+
+
     h2{
         font-size: 24px;
     }
@@ -332,6 +382,7 @@ footer{
     footer{
         font-size: 12px;
     }
+
 
     
 }
