--- a/css/pagestyle.css
+++ b/css/pagestyle.css
@@ -415,7 +415,7 @@ h3{
 h4{
     font-size: 16px;
     font-family: 'Noto Sans', sans-serif;
-    font-weight: 100;
+    /* font-weight: 100; */
     color: #31294c;
     margin: 20px 0;
 }
@@ -424,7 +424,7 @@ h4{
     color: #31294c;
     font-size: 14px;
     font-family: 'Noto Sans', sans-serif;
-    font-weight: 100;
+    font-weight: 300;
 }
 
 .ToTop{
